tests/keyvalue/keyvalue.exp

keyvalue.js:2:17,25: File
This type is incompatible with
keyvalue.js:2:8,13: number

keyvalue.js:2:17,25: access of computed property/element
Error:
keyvalue.js:2:23,24: string
This type is incompatible with
[LIB] dom.js:52:13,18: number

Found 2 errors
