tests/keyvalue/keyvalue.js
var files = new FileList();
var x: number = files[""];
